backends/drm: also don't use DEGAMMA_LUT on Intel

It doesn't seem to have the resolution that the API claims. In the hopefully near
future, the degamma lut will be replaced with the better defined drm color pipeline
API anyways.

BUG: 500837


(cherry picked from commit 83e2f5703c6ab2fd0eda2cd9626be4aad6d34987)

Co-authored-by: Xaver Hugl <xaver.hugl@gmail.com>